<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF548"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_cel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/fechaDeNacimiento"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/ib_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#E91E63"
                    android:onClick="onCalendarView"
                    app:srcCompat="@android:drawable/ic_menu_month" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_askSex"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:text="@string/askSex"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#E91E63"
                    android:text="@string/masculino"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_femenino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#E91E63"
                    android:checked="true"
                    android:text="@string/femenino"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_askhobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobbie"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cb_judo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#E91E63"
                android:text="@string/judo"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cb_apnea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#E91E63"
                android:text="@string/apnea"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cb_ajedrez"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#E91E63"
                android:text="@string/ajedrez"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cb_rugby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#E91E63"
                android:text="@string/Rugby"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_LugarDeNacimiento"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/lugar"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnr_Lugarnacimiento"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:entries="@array/Ciudades"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/tv_show"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <Button
                android:id="@+id/b_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E6004E"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>